Deleted unnecessary dependencies.