@@ -1,15 +1,17 @@
 package com.github.chojmi.inspirations.data.entity.mapper;
 
-import com.annimon.stream.Collectors;
-import com.annimon.stream.Stream;
 import com.github.chojmi.inspirations.data.entity.PhotoEntity;
 import com.github.chojmi.inspirations.data.entity.gallery.GalleryEntity;
 import com.github.chojmi.inspirations.domain.model.Photo;
 
+import java.util.ArrayList;
 import java.util.List;
 
 import javax.inject.Inject;
 import javax.inject.Singleton;
+
+import io.reactivex.Observable;
+import timber.log.Timber;
 
 @Singleton
 public class GalleryEntityDataMapper {
@@ -23,7 +25,9 @@ public class GalleryEntityDataMapper {
     }
 
     private List<Photo> transform(List<PhotoEntity> photoEntities) {
-        return Stream.of(photoEntities).map(this::transform).collect(Collectors.toList());
+        List<Photo> result = new ArrayList<>();
+        Observable.fromIterable(photoEntities).map(this::transform).toList().subscribe(result::addAll, Timber::e);
+        return result;
     }
 
     public List<Photo> transform(GalleryEntity galleryEntity) {
